[tool.poetry]
name = "streamlit-live-dashboard"
version = "0.1.0"
description = ""
authors = ["Matheus Mello de Lima <mellomatheuslima@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.24.1"
numpy = "^1.25.1"
pandas = "^2.0.3"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
